# openaiplus

./: Cargo.toml  README.md  config.example.toml  justfile
just/: just.md  macos-service.sh
src/: main.rs
static/: index.html
